--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,35 +1,25 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - "*"
+  release:
+    types: [created] # 表示在创建新的 Release 时触发
 
 jobs:
-  binaries:
-    runs-on: ubuntu-20.04
-
+  build-go-binary:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        goos: [linux, windows, darwin] # 需要打包的系统
+        goarch: [amd64, arm64] # 需要打包的架构
+        exclude: # 排除某些平台和架构
+          - goarch: arm64
+            goos: windows
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: wangyoucao577/go-release-action@v1.40
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Fetch Go version
-        run: |
-          GO_VERSION=$(perl -ne 'print "$1\n" if /FROM golang:([0-9.]+)/' Dockerfile | head -n1)
-          [ -n "$GO_VERSION" ] || exit 1
-          echo "go_version=$GO_VERSION" >> $GITHUB_ENV
-
-      - name: Setup Go environment
-        uses: actions/setup-go@v4
-        with:
-          go-version: "${{ env.go_version }}"
-
-      - name: Binaries Release
-        uses: goreleaser/goreleaser-action@v4.4.0
-        with:
-          version: ~> 1.16.2
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }} # 一个默认的变量，用来实现往 Release 中添加文件
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          goversion: latest # 可以指定编译使用的 Golang 版本
+          binary_name: "wgcf" # 可以指定二进制文件的名称
